tests/fail/21_unary_minus_bool.lang
// ОЖИДАЕТСЯ ОШИБКА: оператор '-' применим только к числам
функция Начало(): целое {
  // Семантический анализатор должен выдать ошибку:
  // "Оператор '-' применим только к числам"
  пост лог b = -истина;
  вернуть 0;
}
